--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
         <h1>*塔防遊戲 Ivanka*</h1>
 
-	<canvas id ="game-canvas" width = "640" height = "480" >
+	<canvas id ="game-canvas" width ="640" height ="480"/>
 
 	<script src="main.js"></script>
 </body>
